--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,44 +1,3 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>ReviewSpace</title>
-<meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="/gnSkpGda3aErdaZKkRXZHIToh8+ylqkA/lIbZoCymULpYqDb+XUbUoWRNTFeEwIRKS5w9NWoY9T3mg/wRtedQ==" />
-<link rel="stylesheet" media="all" href="/assets/application-c617cd3cc56ea5db583836527c3a19ec935e32bc3e23710c957791a1d7ac6c38.css" />
-<script src="/javascripts/application.js"></script>
-</head>
-<body>
 <div class='notification'>
-<div class="notice">ログインしました。</div>
+    <div class="notice">チャットグループが作成されました。</div>
 </div>
-
-<div class='chat-side'>
-<div class='chat-side__user'>
-<div class='chat-side__user-content'>
-<div class='chat-side__user-name'>
-1234567890
-</div>
-<a class="chat-side__user--new-group" href="/groups/new"><i class='fa fa-pencil-square-o'></i>
-</a><a class="chat-side__user--edit-user" href="/users/edit"><i class='fa fa-cog'></i>
-</a></div>
-</div>
-<div class='chat-side__groups'>
-<div class='chat-side__groups-list'>
-<a href="/groups/2201/messages"><div class='chat-side__group'>
-<div class='chat-side__group-name'>
-group
-</div>
-<div class='chat-side__group-message'>
-まだメッセージはありません
-</div>
-</div>
-</a>
-</div>
-</div>
-</div>
-
-
-</body>
-</html>
