--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,19 @@
 <div class='notification'>
     <div class="notice">チャットグループが作成されました。</div>
 </div>
+
+<div class='chat-side'>
+  <div class='chat-side__user'>
+    <div class='chat-side__user-content'>
+      <div class='chat-side__user-name'>
+        user-name
+      </div>
+      <a class="chat-side__user--new-group" href="/groups/new">
+        <i class="fa fa-pencil-square-o"></i>
+      </a>
+      <a class="chat-side__user--edit-user" href="/users/edit">
+        <i class="fa fa-cog"></i>
+      </a>
+    </div>
+  </div>
+</div>
