--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,4 +16,28 @@
       </a>
     </div>
   </div>
+  <div class='chat-side__groups'>
+    <div class="chat-side__groups-list">
+      <a href="/groups/2201/messages">
+        <div class="chat-side__group">
+          <div class="chat-side__group-name">
+            group1
+          </div>
+          <div class="chat-side__group-message">
+            test1
+          </div>
+        </div>
+      </a>
+      <a href="/groups/2201/messages">
+        <div class="chat-side__group">
+          <div class="chat-side__group-name">
+            group2
+          </div>
+          <div class="chat-side__group-message">
+            test2
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
