--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -41,3 +41,22 @@
     </div>
   </div>
 </div>
+
+<div class='chat-main'>
+  <div class="chat-main__header">
+    <div class="chat-main__header--group clearfix">
+      <div class="chat-main__header--group-name">
+        sampleグループ
+      </div>
+      <a class="chat-main__header--group-edit-btn" href="/groups/2201/edit">
+        edit
+      </a>
+    </div>
+    <div class="chat-main__header-members">
+      MEMBER:
+      <i>
+        1234567890
+      </i>
+    </div>
+  </div>
+</div>
