chat-main-body html&scss

--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -100,5 +100,33 @@ body{
         margin: 40px 45px;
       }
     }
+    .chat-main__body{
+      height: calc( 100vh - 15% - 123px );
+      overflow-y: scroll;
+      .chat-main__body--messages-list{
+        padding-top: 26px;
+        padding-left: 40px;
+        .chat-main__message{
+          padding: 20px 0;
+          .chat-main__message-name{
+            color: #434A54;
+            font-size: 16px;
+            font-weight: bold;
+            float: left;
+          }
+          .chat-main__message-time{
+            color: #999999;
+            font-size: 12px;
+            padding: 0 10px 10px;
+            float: left;
+          }
+          .chat-main__message-body{
+            font-size: 14px;
+            color: #434A54;
+            clear: both;
+          }
+        }
+      }
+    }
   }
 }
