--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class='notification'>
     <div class="notice">チャットグループが作成されました。</div>
 </div>
@@ -57,6 +58,34 @@
       <i>
         1234567890
       </i>
+    </div>
+  </div>
+  <div class="chat-main__body">
+    <div class="chat-main__body--messages-list">
+      <div class="chat-main__message clearfix" data-id="3840">
+        <div class="chat-main__message-name">
+          1234567890
+        </div>
+        <div class="chat-main__message-time">
+          2019/01/10 17:07:11
+        </div>
+        <div class="chat-main__message-body">
+          test1
+          <img class="chat-main__message-body-image" src="">
+        </div>
+      </div>
+      <div class="chat-main__message clearfix" data-id="3837">
+        <div class="chat-main__message-name">
+          9876543210
+        </div>
+        <div class="chat-main__message-time">
+          2019/01/15 02:03:32
+        </div>
+        <div class="chat-main__message-body">
+          test2
+          <img class="chat-main__message-body-image" src="">
+        </div>
+      </div>
     </div>
   </div>
 </div>
