--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,12 +12,12 @@ body{
     height:100vh;
     width:300px;
     float:left;
-    .chat-side__user{
+    &__user{
       height: 15%;
       width: 100%;
       background-color: #090c10;
       position: relative;
-      .chat-side__user-content{
+      &-content{
         height: 50px;
         width: 100%;
         line-height: 50px;
@@ -52,15 +52,15 @@ body{
       height: 85%;
       width: 100%;
       background-color: #253141;
-      .chat-side__groups-list{
+      &-list{
         height: 100%;
         .chat-side__group{
           padding: 20px;
-          .chat-side__group-name{
+          &-name{
             font-size: 15px;
             color: #FFFFFF;
           }
-          .chat-side__group-message{
+          &-message{
             font-size: 11px;
             color: #FFFFFF;
             margin-top:5px;
@@ -73,19 +73,19 @@ body{
     height: 100vh;
     width: calc( 100vw - 300px );
     float: left;
-    .chat-main__header{
+    &__header{
       height: 15%;
       border: 1px solid #eeeeee;
-      .chat-main__header--group{
+      &--group{
         margin: 0 40px;
         padding-top: 25px;
-        .chat-main__header--group-name{
+        &-name{
           color: #333;
           font-size: 20px;
           margin: 5px;
           float: left;
         }
-        .chat-main__header--group-edit-btn{
+        &-edit-btn{
           color: #38AEF0;
           font-size: 15px;
           padding: 12.5px 20px;
@@ -94,33 +94,33 @@ body{
           float: right;
         }
       }
-      .chat-main__header-members{
+      &-members{
         color: #999999;
         font-size: 12px;
         margin: 40px 45px;
       }
     }
-    .chat-main__body{
+    &__body{
       height: calc( 100vh - 15% - 123px );
       overflow-y: scroll;
-      .chat-main__body--messages-list{
+      &--messages-list{
         padding-top: 26px;
         padding-left: 40px;
         .chat-main__message{
           padding: 20px 0;
-          .chat-main__message-name{
+          &-name{
             color: #434A54;
             font-size: 16px;
             font-weight: bold;
             float: left;
           }
-          .chat-main__message-time{
+          &-time{
             color: #999999;
             font-size: 12px;
             padding: 0 10px 10px;
             float: left;
           }
-          .chat-main__message-body{
+          &-body{
             font-size: 14px;
             color: #434A54;
             clear: both;
@@ -128,12 +128,12 @@ body{
         }
       }
     }
-    .chat-main__footer{
+    &__footer{
      padding-bottom: 30px;
       height: 90px;
       width: 100%;
       background-color: #B8C3C7;
-      .chat-main__footer-form{
+      &-form{
         margin: 0 40px;
         position: relative;
         .chat-main__footer-body{
